bk_ida/gccida/c1/simplify_comparison
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10393:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10393:32: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10397:4: error: expected ';' after expression
rtx v5; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10397:5: error: use of undeclared identifier 'v5'
rtx v5; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10432:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10435:4: error: expected ';' after expression
rtx v43; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10435:5: error: use of undeclared identifier 'v43'
rtx v43; // r8 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10437:4: error: expected ';' after expression
rtx v45; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10437:5: error: use of undeclared identifier 'v45'
rtx v45; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10462:4: error: expected ';' after expression
rtx v70; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10462:5: error: use of undeclared identifier 'v70'
rtx v70; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10463:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v71; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10469:4: error: expected ';' after expression
rtx v77; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10469:5: error: use of undeclared identifier 'v77'
rtx v77; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10480:4: error: expected ';' after expression
rtx v88; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10480:5: error: use of undeclared identifier 'v88'
rtx v88; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10497:4: error: expected ';' after expression
rtx last_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10497:5: error: use of undeclared identifier 'last_value'
rtx last_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/combine.c:10516:4: error: expected ';' after expression
rtx v124; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_comparison/src/obj/combine.o] Error 1
